# gordot

./: README.md  pyproject.toml
gordot/: __main__.py  state.py
gordot/clipping/: liang_barsky.py  sutherland_hodgeman.py
gordot/components/: __init__.py  sidebar.py  table.py  tools.py  vertical_tab_widget.py  viewport.py
gordot/io/: __init__.py  obj_exporter.py
gordot/menus/: __init__.py  shape_edit.py  shape_list.py  tools_menu.py  upper_menu.py
gordot/shapes/: __init__.py  bezier.py  bspline.py  line.py  point.py  polygon.py  shape.py  triangle.py  wireframe.py
gordot/structures/: __init__.py  display_file.py  vector.py  view.py
gordot/tools/: __init__.py  bezier.py  bspline.py  color.py  file_export.py  file_import.py  line.py  object.py  pan.py  point.py  rotate.py  rotate_viewport.py  scale.py  translate.py  wireframe.py  zoom.py
gordot/utils/: __init__.py  coord.py  iterators.py  parametric_curves.py  transform.py
gordot/views/: main_window.py
tests/: test_gordot.py
