[tool.poetry]
name = "gordot"
version = "0.1.0"
description = ""
authors = ["João Vitor Maia <maia.tostring@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "^5.15.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
